# lex-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  RAILWAY_GUIDE.md  README.he.md  README.md  docker-compose.yml  push.sh  pyproject.toml  pyrightconfig.json  railway.json
alembic/: env.py
alembic/versions/: 9f9947f1a3a6_initial_migration.py  a1b2c3d4e5f6_add_captcha_action_to_chatsettings.py  d8e5270ca9c5_initial_schema_and_shabbat_lock.py
scratch/: check_api.py  live_test_hebcal.py  test_image_captcha.py  test_input_filter.py  test_shabbat.py
scripts/: benchmark_cache.py  dev.py  setup_docker.sh  strip_comments.py  translate.py  translate_locales.py
src/: config.py  main.py
src/cache/: local_cache.py  redis.py
src/core/: blacklist_defaults.py  bot.py  constants.py  context.py  plugin.py
src/db/: __init__.py  base.py  client.py  engine.py  session.py
src/db/models/: __init__.py  ai.py  chats.py  core.py  federation.py  groups.py  moderation.py  plugins.py
src/db/repositories/: actions.py  admin_panel.py  admins.py  ai_guard.py  allowed_channels.py  approvals.py  blacklist.py  chats.py  filters.py  gban.py  group_settings.py  rules.py  slowmode.py  stickers.py  warns.py
src/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  he.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh.json
src/plugins/: admin.py  admin_sync.py  afk.py  ai_guard.py  antispam.py  approvals.py  bans.py  blacklist.py  captcha.py  channel_protect.py  channels.py  cleanup.py  connections.py  disable.py  donate.py  entity_block.py  federation.py  filters.py  flood.py  force_subscribe.py  formatting.py  gban.py  help.py  lang_block.py  language.py  logging.py  media_filter.py  misc.py  notes.py  owner.py  privacy.py  purge.py  raid.py  registration.py  reports.py  rules.py  service_msgs.py  shabbat.py  slowmode.py  stickers.py  (+4 more)
src/plugins/admin/: __init__.py  handlers.py
src/plugins/admin_panel/: __init__.py  decorators.py  repository.py  validation.py
src/plugins/afk/: __init__.py  handlers.py
src/plugins/ai_assistant/: __init__.py  handlers.py  prompts.py  repository.py  service.py  telegram_markdown.py
src/plugins/antispam/: __init__.py  handlers.py
src/plugins/approvals/: __init__.py  handlers.py  repository.py
src/plugins/bans/: __init__.py  handlers.py  repository.py
src/plugins/blacklist/: __init__.py  handlers.py  repository.py
src/plugins/captcha/: __init__.py  handlers.py
src/plugins/channel_protect/: __init__.py  handlers.py  repository.py
src/plugins/cleanup/: __init__.py  handlers.py
src/plugins/connections/: __init__.py  handlers.py  repository.py
src/plugins/disable/: __init__.py  handlers.py  repository.py
src/plugins/entity_block/: __init__.py  handlers.py  repository.py
src/plugins/federation/: __init__.py  handlers.py  repository.py
src/plugins/filters/: __init__.py  handlers.py  repository.py
src/plugins/flood/: __init__.py  handlers.py  repository.py  service.py
src/plugins/force_subscribe/: __init__.py  handlers.py  repository.py
src/plugins/formatting/: __init__.py  handlers.py
src/plugins/gban/: __init__.py  handlers.py  repository.py
src/plugins/lang_block/: __init__.py  handlers.py  plugin.json  repository.py  service.py
src/plugins/language/: __init__.py  handlers.py  repository.py
src/plugins/logging/: __init__.py  handlers.py  service.py
src/plugins/media_filter/: __init__.py  handlers.py  repository.py
src/plugins/misc/: __init__.py  handlers.py
src/plugins/notes/: __init__.py  handlers.py  repository.py
src/plugins/privacy/: __init__.py  handlers.py
src/plugins/purge/: __init__.py  handlers.py
src/plugins/raid/: __init__.py  handlers.py
src/plugins/reports/: __init__.py  handlers.py  (+1 more)
src/utils/: about.py  actions.py  admin_cache.py  allowlist_cache.py  approved_cache.py  captcha_utils.py  decorators.py  formatters.py  hebcal.py  i18n.py  input.py  lang_cache.py  lang_utils.py  local_cache.py  logger.py  media.py  moderation.py  permissions.py  rate_limit.py  stickers.py  telegram_storage.py  text.py  time_parser.py  url_scanner.py
tests/: conftest.py  factories.py  test_actions.py  test_admins.py  test_cache.py  test_captcha_cycle.py  test_channels.py  test_flood.py  test_hebcal.py  test_langdetect.py  test_models_ai.py  test_models_core.py  test_models_federation.py  test_models_filters.py  test_models_groups.py  test_models_moderation.py  test_models_plugins.py  test_translate.py  test_watermark_media.py
(+49 files in other folders)
