[project]
name = "lex-tg"
version = "1.0.0"
description = "lex-tg: Advanced Telegram Group Management Bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kurigram",
    "uvloop",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "redis",
    "apscheduler>=3.10",
    "pydantic-settings>=2.0",
    "loguru",
    "tgcrypto>=1.2.5",
    "deep-translator>=1.11.4",
    "python-dotenv>=1.2.2",
    "langdetect>=1.0.9",
    "colorama>=0.4.6",
    "emoji>=2.15.0",
    "Pillow",
]

[project.scripts]
bot = "src.main:run"
translate = "scripts.translate_locales:main"
lint = "scripts.dev:lint"
fmt = "scripts.dev:fmt"
typecheck = "scripts.dev:check"
test = "scripts.dev:test"
migrate = "scripts.dev:migrate"

[tool.uv]
compile-bytecode = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "fakeredis",
    "pytest-mock",
    "factory-boy",
    "mypy",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
